# equusExpress

./: .gitignore  DESIGN.md  Dockerfile  Makefile  README.md  REQUIREMENTS.md  TODO.md  design.md  docker-compose.traefik.yml  docker-compose.yml  equus_express-0.1.0-py3-none-any.whl  pyproject.toml  setup.cfg  sonar-project.properties
.github/workflows/: build.yml  ci.yml  docker-publish.yml
equus_express/: client.py  main.py  server.py
frontend/: .dependency-cruiser.js  .gitignore  TODO_backend.md  eslint.config.mjs  hello  package.json  recipe.html  tsconfig.json
frontend/src/: bioreactor-monitor.ts  blockly-setup.ts  index.html  interface.ts  machine.service.ts  main.ts  models.ts  nats-signals.service.spec.ts  nats-signals.service.ts  recipe.ts  router.ts  style.css
frontend/src/app/: app.module.ts
scripts/: build_frontend.sh
src/equus_express/: authentication_server.py  client.py  custom_uuid.py  edge_device_controller.py  exceptions.py  main.py  models.py  pubsub_auth_interfaces.py  pubsub_daemon_core.py  server.py  system_api.py
src/equus_express/auth/: __init__.py
src/equus_express/dashboard/: abap.0958f340.js  abap.0958f340.js.map  abap.5cbc0d93.js  abap.5cbc0d93.js.map  apex.d1d21ed4.js  apex.d1d21ed4.js.map  apex.ffb2702a.js  apex.ffb2702a.js.map  azcli.39aa299f.js  azcli.39aa299f.js.map  azcli.51d77a53.js  azcli.51d77a53.js.map  bat.f687ca90.js  bat.f687ca90.js.map  bat.f9fc4693.js  bat.f9fc4693.js.map  bicep.6fcb0dba.js  bicep.6fcb0dba.js.map  bicep.a5677de1.js  bicep.a5677de1.js.map  bioreactor-monitor.1336377d.js  bioreactor-monitor.1336377d.js.map  bioreactor-monitor.6fe93c4f.js  bioreactor-monitor.6fe93c4f.js.map  bioreactor-monitor.a34be1ca.js  bioreactor-monitor.a34be1ca.js.map  cameligo.6976918c.js  cameligo.6976918c.js.map  cameligo.9fb02c52.js  cameligo.9fb02c52.js.map  clojure.5ab65394.js  clojure.5ab65394.js.map  clojure.6a017b4e.js  clojure.6a017b4e.js.map  coffee.1a482de7.js  coffee.1a482de7.js.map  coffee.45c3f932.js  coffee.45c3f932.js.map  cpp.2d48bb43.js  cpp.2d48bb43.js.map  (+327 more)
src/equus_express/frontend/: TODO.md  package.json  tailwind.config.js
src/equus_express/frontend/nsc/reverent_davinci/: .nsc
src/equus_express/frontend/src/: app.jsx  bioreactor-monitor.ts  blockly-setup.ts  interface.ts
src/equus_express/frontend/src/app/: object-model.ts
src/equus_express/internal/: session.py
src/equus_express/model/: physical-model.schema.json  physical_models.py  recipe-model.schema.json  recipe_models.py
src/equus_express/routers/: authentication.py  telemetry.py
src/equus_express/static/: app.js  style.css
src/equus_express/templates/: admin_portal_frontend.html  index.html
tests/: app_test.py  client_test.py  server_test.py  session_test.py  systemd_and_tests.py  test_authentication.py  test_design_doc_schemas.py
