[build-system]
requires = ["setuptools>=61.0", "wheel", "yarn.build"]
build-backend = "setuptools.build_meta"

[project]
name = "equus-express"
version = "0.1.0"
description = "Secure IoT API Server and Device Agent"
readme = "README.md" # Assumes a README.md at the project root
authors = [{name = "John Vishnefske", email = "jvishnefske@gmail.com"}] 
license = "BSD-3-Clause"
requires-python = ">=3.9"
dependencies = [
    "cryptography>=45.0.5",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "jinja2",
    "httpx[cli]",
    "psutil", # Add psutil if it's a runtime dependency for telemetry
    "webauthn>=2.6.0",
    "fido2>=0.9.3",
    "cbor>=1.0.0",
    "sqlalchemy>=2.0.42",
    "python-jose>=3.5.0",
    "jsonschema>=4.25.0",
    "python-multipart>=0.0.20",
]

[tool.setuptools.packages.find]
where = ["src"] # Specify that packages are found under the 'src' directory

[tool.setuptools.package-data]
"equus_express" = ["static/*", "templates/*"] # Ensure built static files are included in the wheel

[tool.yarn.build]
folder = "frontend"
install = "yarn install --frozen-lockfile"
build = "yarn run build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
